AXNASEAN-2980 fix report template badge number too small issue

--- a/static/css/rule_item_list.css
+++ b/static/css/rule_item_list.css
@@ -318,7 +318,7 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
 
 .container-rule-list-item .button_origin {
@@ -336,7 +336,7 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
 
 .container-rule-list-item .button_new {
@@ -354,7 +354,7 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
 
 .container-rule-list-item .button_add {
@@ -372,7 +372,7 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
 
 .container-rule-list-item .button_minus {
@@ -390,7 +390,7 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
 
 .container-rule-list-item .button_modify {
@@ -408,5 +408,5 @@
     border-width: 0.5px;
     color: white;
     border-radius: 10px;
-    font-size: 4px;
+    font-size: 12px;
 }
